Fixed link container for small screens with flex-wrap

--- a/app/src/static/css/components/_post.scss
+++ b/app/src/static/css/components/_post.scss
@@ -54,7 +54,8 @@
 			}
       .link-container {
         @include vendor('flex-grow', '1');
-        display: inline-flex;
+        display: flex;
+        flex-wrap: wrap;
         padding: (0px _size(section-spacing) (_size(section-spacing) * 1.1) _size(section-spacing));
         margin-bottom: 0;
       }
@@ -242,6 +243,9 @@
 					h2 {
 						font-size: 1.1em;
 					}
+        }
+        .link-container {
+          justify-content: center;
         }
 			}
 		}
